реализовали открытие графика в следующем окне

--- a/src/smartcalk_QT/Makefile
+++ b/src/smartcalk_QT/Makefile
@@ -52,21 +52,23 @@ OBJECTS_DIR   = ./
 
 ####### Files
 
-SOURCES       = main.cpp \
+SOURCES       = form.cpp \
+		main.cpp \
 		mainwindow.cpp \
 		qcustomplot.cpp \
 		s21_calc.c \
 		s21_steck.c \
-		s21_validation.c qrc_style.cpp \
+		s21_validation.c moc_form.cpp \
 		moc_mainwindow.cpp \
 		moc_qcustomplot.cpp
-OBJECTS       = main.o \
+OBJECTS       = form.o \
+		main.o \
 		mainwindow.o \
 		qcustomplot.o \
 		s21_calc.o \
 		s21_steck.o \
 		s21_validation.o \
-		qrc_style.o \
+		moc_form.o \
 		moc_mainwindow.o \
 		moc_qcustomplot.o
 DIST          = /usr/lib/qt/mkspecs/features/spec_pre.prf \
@@ -155,9 +157,11 @@ DIST          = /usr/lib/qt/mkspecs/features/spec_pre.prf \
 		/usr/lib/qt/mkspecs/features/exceptions.prf \
 		/usr/lib/qt/mkspecs/features/yacc.prf \
 		/usr/lib/qt/mkspecs/features/lex.prf \
-		smartcalk.pro mainwindow.h \
+		smartcalk.pro form.h \
+		mainwindow.h \
 		qcustomplot.h \
-		s21_calc.h main.cpp \
+		s21_calc.h form.cpp \
+		main.cpp \
 		mainwindow.cpp \
 		qcustomplot.cpp \
 		s21_calc.c \
@@ -171,7 +175,7 @@ TARGET        = smartcalk
 first: all
 ####### Build rules
 
-smartcalk: ui_mainwindow.h $(OBJECTS)  
+smartcalk: ui_form.h ui_mainwindow.h $(OBJECTS)  
 	$(LINK) $(LFLAGS) -o $(TARGET) $(OBJECTS) $(OBJCOMP) $(LIBS)
 
 Makefile: smartcalk.pro /usr/lib/qt/mkspecs/linux-g++/qmake.conf /usr/lib/qt/mkspecs/features/spec_pre.prf \
@@ -260,8 +264,7 @@ Makefile: smartcalk.pro /usr/lib/qt/mkspecs/linux-g++/qmake.conf /usr/lib/qt/mks
 		/usr/lib/qt/mkspecs/features/exceptions.prf \
 		/usr/lib/qt/mkspecs/features/yacc.prf \
 		/usr/lib/qt/mkspecs/features/lex.prf \
-		smartcalk.pro \
-		style.qrc
+		smartcalk.pro
 	$(QMAKE) -o Makefile smartcalk.pro -spec linux-g++ CONFIG+=debug CONFIG+=qml_debug
 /usr/lib/qt/mkspecs/features/spec_pre.prf:
 /usr/lib/qt/mkspecs/common/unix.conf:
@@ -350,7 +353,6 @@ Makefile: smartcalk.pro /usr/lib/qt/mkspecs/linux-g++/qmake.conf /usr/lib/qt/mks
 /usr/lib/qt/mkspecs/features/yacc.prf:
 /usr/lib/qt/mkspecs/features/lex.prf:
 smartcalk.pro:
-style.qrc:
 qmake: FORCE
 	@$(QMAKE) -o Makefile smartcalk.pro -spec linux-g++ CONFIG+=debug CONFIG+=qml_debug
 
@@ -365,11 +367,10 @@ dist: distdir FORCE
 distdir: FORCE
 	@test -d $(DISTDIR) || mkdir -p $(DISTDIR)
 	$(COPY_FILE) --parents $(DIST) $(DISTDIR)/
-	$(COPY_FILE) --parents style.qrc $(DISTDIR)/
 	$(COPY_FILE) --parents /usr/lib/qt/mkspecs/features/data/dummy.cpp $(DISTDIR)/
-	$(COPY_FILE) --parents mainwindow.h qcustomplot.h s21_calc.h $(DISTDIR)/
-	$(COPY_FILE) --parents main.cpp mainwindow.cpp qcustomplot.cpp s21_calc.c s21_steck.c s21_validation.c $(DISTDIR)/
-	$(COPY_FILE) --parents mainwindow.ui $(DISTDIR)/
+	$(COPY_FILE) --parents form.h mainwindow.h qcustomplot.h s21_calc.h $(DISTDIR)/
+	$(COPY_FILE) --parents form.cpp main.cpp mainwindow.cpp qcustomplot.cpp s21_calc.c s21_steck.c s21_validation.c $(DISTDIR)/
+	$(COPY_FILE) --parents form.ui mainwindow.ui $(DISTDIR)/
 
 
 clean: compiler_clean 
@@ -393,23 +394,22 @@ check: first
 
 benchmark: first
 
-compiler_rcc_make_all: qrc_style.cpp
+compiler_rcc_make_all:
 compiler_rcc_clean:
-	-$(DEL_FILE) qrc_style.cpp
-qrc_style.cpp: style.qrc \
-		/usr/bin/rcc \
-		style.css
-	/usr/bin/rcc -name style style.qrc -o qrc_style.cpp
-
 compiler_moc_predefs_make_all: moc_predefs.h
 compiler_moc_predefs_clean:
 	-$(DEL_FILE) moc_predefs.h
 moc_predefs.h: /usr/lib/qt/mkspecs/features/data/dummy.cpp
 	g++ -pipe -g -std=gnu++1z -Wall -Wextra -dM -E -o moc_predefs.h /usr/lib/qt/mkspecs/features/data/dummy.cpp
 
-compiler_moc_header_make_all: moc_mainwindow.cpp moc_qcustomplot.cpp
+compiler_moc_header_make_all: moc_form.cpp moc_mainwindow.cpp moc_qcustomplot.cpp
 compiler_moc_header_clean:
-	-$(DEL_FILE) moc_mainwindow.cpp moc_qcustomplot.cpp
+	-$(DEL_FILE) moc_form.cpp moc_mainwindow.cpp moc_qcustomplot.cpp
+moc_form.cpp: form.h \
+		moc_predefs.h \
+		/usr/bin/moc
+	/usr/bin/moc $(DEFINES) --include /home/admin/SmartCalc-v1.0/src/smartcalk_QT/moc_predefs.h -I/usr/lib/qt/mkspecs/linux-g++ -I/home/admin/SmartCalc-v1.0/src/smartcalk_QT -I/usr/include/qt -I/usr/include/qt/QtPrintSupport -I/usr/include/qt/QtWidgets -I/usr/include/qt/QtGui -I/usr/include/qt/QtCore -I/usr/include/c++/12.2.0 -I/usr/include/c++/12.2.0/x86_64-pc-linux-gnu -I/usr/include/c++/12.2.0/backward -I/usr/lib/gcc/x86_64-pc-linux-gnu/12.2.0/include -I/usr/local/include -I/usr/lib/gcc/x86_64-pc-linux-gnu/12.2.0/include-fixed -I/usr/include form.h -o moc_form.cpp
+
 moc_mainwindow.cpp: mainwindow.h \
 		qcustomplot.h \
 		s21_calc.h \
@@ -426,12 +426,15 @@ compiler_moc_objc_header_make_all:
 compiler_moc_objc_header_clean:
 compiler_moc_source_make_all:
 compiler_moc_source_clean:
-compiler_uic_make_all: ui_mainwindow.h
+compiler_uic_make_all: ui_form.h ui_mainwindow.h
 compiler_uic_clean:
-	-$(DEL_FILE) ui_mainwindow.h
+	-$(DEL_FILE) ui_form.h ui_mainwindow.h
+ui_form.h: form.ui \
+		/usr/bin/uic
+	/usr/bin/uic form.ui -o ui_form.h
+
 ui_mainwindow.h: mainwindow.ui \
-		/usr/bin/uic \
-		qcustomplot.h
+		/usr/bin/uic
 	/usr/bin/uic mainwindow.ui -o ui_mainwindow.h
 
 compiler_yacc_decl_make_all:
@@ -440,9 +443,13 @@ compiler_yacc_impl_make_all:
 compiler_yacc_impl_clean:
 compiler_lex_make_all:
 compiler_lex_clean:
-compiler_clean: compiler_rcc_clean compiler_moc_predefs_clean compiler_moc_header_clean compiler_uic_clean 
+compiler_clean: compiler_moc_predefs_clean compiler_moc_header_clean compiler_uic_clean 
 
 ####### Compile
+
+form.o: form.cpp form.h \
+		ui_form.h
+	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o form.o form.cpp
 
 main.o: main.cpp mainwindow.h \
 		qcustomplot.h \
@@ -467,8 +474,8 @@ s21_steck.o: s21_steck.c s21_calc.h
 s21_validation.o: s21_validation.c s21_calc.h
 	$(CC) -c $(CFLAGS) $(INCPATH) -o s21_validation.o s21_validation.c
 
-qrc_style.o: qrc_style.cpp 
-	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o qrc_style.o qrc_style.cpp
+moc_form.o: moc_form.cpp 
+	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o moc_form.o moc_form.cpp
 
 moc_mainwindow.o: moc_mainwindow.cpp 
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o moc_mainwindow.o moc_mainwindow.cpp
