исправил пролему с точкой, обнаружил баг в qt проблема с дробными числами

--- a/src/Makefile
+++ b/src/Makefile
@@ -77,7 +77,7 @@ tests: OBJECT
 
 git:
 	git add .
-	git commit -m "пока рабоатет, но нужно проект в порядокпривести"
+	git commit -m "исправил пролему с точкой, обнаружил баг в qt проблема с дробными числами"
 	git push
 
 cpp:
